--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources_de.properties
@@ -7,7 +7,7 @@ action.about.description=Informationen \u00fcber JFreeReport
 
 action.close.mnemonic=VK_B
 action.close.name=Schliessen
-action.close.description=Beendet JFreeReportDemo
+action.close.description=Beendet die JFreeReportDemo
 
 action.print-preview.mnemonic=VK_P
 action.print-preview.name=Seitenansicht ...
