--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_ca.properties
@@ -38,3 +38,4 @@ error.processingfailed.message=Error processant aquest informe\: {0}
 
 error.savefailed.title=Error al desar
 error.savefailed.message=Error guardant el fitxer CSV\: {0}
+csvexportdialog.targetExistsWarning=El fitxer ''{0}'' existeix. El vols sobreescriure?
