--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_cs_CZ.properties
@@ -33,3 +33,4 @@ error.processingfailed.title=Selhalo zpracov\u00e1n\u00ed sestavy
 
 error.savefailed.message=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed CSV souboru\: {0}
 error.savefailed.title=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed
+csvexportdialog.targetExistsWarning=Soubor ''{0}'' existuje. P\u00f8epsat?
