--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
@@ -38,3 +38,4 @@ error.processingfailed.message=Die Berichtsgenerierung ist fehlgeschlagen\: {0}
 
 error.savefailed.title=Speichern fehlgeschlagen
 error.savefailed.message=Der Bericht konnte nicht gespeichert werden\: {0}
+csvexportdialog.targetExistsWarning=Die Datei ''{0}'' existiert bereits. Soll diese Datei \u00fcberschrieben werden?
