--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_fr.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_fr.properties
@@ -37,3 +37,4 @@ error.savefailed.message=Erreur durant l'enregistrement en PDF \: {0}
 
 error.processingfailed.title=Echec du traitement du Report
 error.processingfailed.message=Erreur lors du traitement de ce rapport\: {0}
+csvexportdialog.targetExistsWarning=Le fichier ''{0}'' existe. Voulez vous l'\u00e9craser?
