--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_hu.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_hu.properties
@@ -33,3 +33,4 @@ error.processingfailed.message=A lista k\u00e9sz\u00edt\u00e9se sor\u00e1n hiba 
 
 error.savefailed.title=Hiba a ment\u00e9skor
 error.savefailed.message=Hiba a CSV f\u00e1jl ment\u00e9sekor\: {0}
+csvexportdialog.targetExistsWarning=A(z) ''{0}'' f\u00e1jl l\u00e9tezik. Fel\u00fcl\u00edrhatom?
