--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_nl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_nl.properties
@@ -37,3 +37,4 @@ error.processingfailed.message=Rapport generatie mislukt\: {0}
 
 error.savefailed.title=Fout tijdens opslaan
 error.savefailed.message=Opslaan als CSV bestand mislukt\: {0}
+csvexportdialog.targetExistsWarning=Het bestand ''{0}'' bestaat reeds. Overschrijven?
