--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_pl.properties
@@ -39,3 +39,4 @@ error.processingfailed.title=Przetwarzanie raportu nie powiod\u0142o si\u0119
 error.processingfailed.message=Podczas przetwarzania raportu wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d\: {0}
 error.savefailed.title=B\u0142\u0105d zapisu
 error.savefailed.message=B\u0142\u0105d podczas zapisu pliku CSV\: {0}
+csvexportdialog.targetExistsWarning=Plik ''{0}'' ju\u017c istnieje. Nadpisa\u0107?
