--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_si.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_si.properties
@@ -32,3 +32,4 @@ error.processingfailed.message=Napaka pri obdelavi poro\u010dila\: {0}
 
 error.savefailed.title=Napaka pri shranjevanju
 error.savefailed.message=Napaka pri shranjevanju CSV datoteke\: {0}
+csvexportdialog.targetExistsWarning=Datoteka ''{0}'' obstaja. Ali jo \u017eelite prepisati?
