--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_sv.properties
@@ -38,3 +38,4 @@ error.processingfailed.message=F\u00f6ljande fel uppstod n\u00e4r rapporten skap
 
 error.savefailed.title=Fel vid skrivning
 error.savefailed.message=F\u00f6ljande fel intr\u00e4ffade vid CSV skrivning\: {0}
+csvexportdialog.targetExistsWarning=Filen ''{0}'' finns. Skriv \u00f6ver den?
