--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_ca.properties
@@ -49,3 +49,4 @@ htmlexportdialog.warningTitle=Atenci\u00f3
 htmlexportdialog.zip-archives=Arxius ZIP
 htmlexportdialog.zip-export=Exportaci\u00f3 a un fitxer ZIP
 htmlexportdialog.author=Autor
+htmlexportdialog.targetExistsWarning=El fitxer ''{0}'' existeix. El vols sobreescriure?
