--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_cs_CZ.properties
@@ -42,3 +42,4 @@ htmlexportdialog.title=N\u00e1zev
 htmlexportdialog.warningTitle=Varov\u00e1n\u00ed
 htmlexportdialog.zip-archives=ZIP archivy
 htmlexportdialog.zip-export=Export do ZIP souboru
+htmlexportdialog.targetExistsWarning=Soubor ''{0}'' existuje. P\u00f8epsat?
