--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_de.properties
@@ -48,3 +48,4 @@ htmlexportdialog.warningTitle=Warnung
 htmlexportdialog.zip-archives=ZIP Archive
 htmlexportdialog.zip-export=ZIP-Archiv Export
 htmlexportdialog.author=Autor
+htmlexportdialog.targetExistsWarning=Die Datei ''{0}'' existiert bereits. Soll diese Datei \u00fcberschrieben werden?
