--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_fr.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_fr.properties
@@ -48,3 +48,4 @@ htmlexportdialog.warningTitle=Attention
 htmlexportdialog.zip-archives=Archives ZIP
 htmlexportdialog.zip-export=Exportation fichier ZIP
 htmlexportdialog.author=Auteur
+htmlexportdialog.targetExistsWarning=Le fichier ''{0}'' existe. Voulez vous l'\u00e9craser?
