--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_hu.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_hu.properties
@@ -40,3 +40,4 @@ htmlexportdialog.targetPathIsAbsolute=A megadott el\u00e9r\u00e9si \u00fat egy a
 htmlexportdialog.title=C\u00edm
 htmlexportdialog.warningTitle=Figyelmeztet\u00e9s
 htmlexportdialog.author=Szerz\u00f5
+htmlexportdialog.targetExistsWarning=A(z) ''{0}'' f\u00e1jl l\u00e9tezik. Fel\u00fcl\u00edrhatom?
