--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_nl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_nl.properties
@@ -48,3 +48,4 @@ htmlexportdialog.warningTitle=Waarschuwing
 htmlexportdialog.zip-archives=ZIP archieven
 htmlexportdialog.zip-export=ZIP archief export
 htmlexportdialog.author=Auteur
+htmlexportdialog.targetExistsWarning=Het bestand ''{0}'' bestaat reeds. Overschrijven?
