--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_pl.properties
@@ -51,3 +51,4 @@ htmlexportdialog.warningTitle=Ostrze\u017cenie
 htmlexportdialog.zip-archives=Archiwa ZIP
 htmlexportdialog.zip-export=Eksport do ZIP
 htmlexportdialog.author=Autor
+htmlexportdialog.targetExistsWarning=Plik ''{0}'' ju\u017c istnieje. Nadpisa\u0107?
