--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_si.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_si.properties
@@ -39,3 +39,4 @@ htmlexportdialog.targetPathIsAbsolute=Navedena ciljna pot je absolutni imenik.\n
 htmlexportdialog.title=Naslov
 htmlexportdialog.warningTitle=Opozorilo
 htmlexportdialog.author=Avtor
+htmlexportdialog.targetExistsWarning=Datoteka ''{0}'' obstaja. Ali jo \u017eelite prepisati?
