--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_sv.properties
@@ -49,3 +49,4 @@ htmlexportdialog.warningTitle=Varning
 htmlexportdialog.zip-archives=ZIP arkiv
 htmlexportdialog.zip-export=ZIP fil export
 htmlexportdialog.author=F\u00f6rfattare
+htmlexportdialog.targetExistsWarning=Filen ''{0}'' finns. Skriv \u00f6ver den?
