--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_cs_CZ.properties
@@ -44,3 +44,4 @@ pdfsavedialog.userpassword=U\u009eivatelsk\u00e9 heslo
 pdfsavedialog.userpasswordNoMatch=U\u009eivatelsk\u00e9 heslo nesouhlas\u00ed.
 pdfsavedialog.userpasswordconfirm=Potvrdit
 pdfsavedialog.warningTitle=Varov\u00e1n\u00ed
+pdfsavedialog.targetOverwriteWarning=Soubor ''{0}'' existuje. M\u00e1m ho p\u00f8epsat?
