--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_de.properties
@@ -53,3 +53,4 @@ pdfsavedialog.userpasswordNoMatch=Die Benutzerkennworte stimmen nicht \u00fcbere
 pdfsavedialog.userpasswordconfirm=Wiederholen
 pdfsavedialog.warningTitle=Warnung
 pdfsavedialog.allowAssembly=Zusammensetzen erlauben
+pdfsavedialog.targetOverwriteWarning=Die Datei ''{0}'' existiert bereits. Soll diese Datei \u00fcberschrieben werden?
