--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_es.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_es.properties
@@ -47,3 +47,4 @@ pdfsavedialog.userpassword=Contrase\u00f1a de usuario
 pdfsavedialog.userpasswordNoMatch=Error al confirmar la contrase\u00f1a de usuario.
 pdfsavedialog.userpasswordconfirm=Confirmar
 pdfsavedialog.allowAssembly=Reensamblable
+pdfsavedialog.targetOverwriteWarning=Ya existe un fichero\: ''{0}'' . \u00bfDesea sobreescribirlo?
