--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_fr.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_fr.properties
@@ -53,3 +53,4 @@ pdfsavedialog.userpasswordNoMatch=Le mot de passe ne correspond pas.
 pdfsavedialog.userpasswordconfirm=Confirmer
 pdfsavedialog.warningTitle=Attention
 pdfsavedialog.allowAssembly=Autoriser le (R\u00e9-)assemblage
+pdfsavedialog.targetOverwriteWarning=Le fichier ''{0}'' existe. Voulez vous l'\u00e9craser?
