--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_hu.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_hu.properties
@@ -50,3 +50,4 @@ pdfsavedialog.userpasswordNoMatch=A jelsz\u00f3 nem egyezik
 pdfsavedialog.userpasswordconfirm=Meger\u00f5s\u00edt\u00e9s
 pdfsavedialog.warningTitle=Figyelmeztet\u00e9s
 pdfsavedialog.allowAssembly=(\u00dajra-)szerkesz\u00e9s enged\u00e9lyez\u00e9se
+pdfsavedialog.targetOverwriteWarning=A(z) ''{0}'' f\u00e1jl l\u00e9tezik. Fel\u00fcl\u00edrhatom?
