--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_nl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_nl.properties
@@ -53,3 +53,4 @@ pdfsavedialog.userpassword=Gebruikerswachtwoord
 pdfsavedialog.userpasswordNoMatch=De gebruikerswachtwoorden komen niet overeen.
 pdfsavedialog.userpasswordconfirm=Herhalen
 pdfsavedialog.warningTitle=Waarschuwing
+pdfsavedialog.targetOverwriteWarning=Het bestand ''{0}'' bestaat reeds. Overschrijven?
