--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_pl.properties
@@ -49,3 +49,4 @@ pdfsavedialog.userpasswordNoMatch=Has\u0142o i powt\u00f3rzenie has\u0142a s\u01
 pdfsavedialog.userpasswordconfirm=Powt\u00f3rzenie has\u0142a)
 pdfsavedialog.warningTitle=Ostrze\u017cenie
 pdfsavedialog.allowAssembly=Zezw\u00f3l na edycj\u0119 sk\u0142adu
+pdfsavedialog.targetOverwriteWarning=Plik ''{0}'' ju\u017c istnieje. Zast\u0105pi\u0107?
