--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_si.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_si.properties
@@ -49,3 +49,4 @@ pdfsavedialog.userpasswordNoMatch=Uporabni\u0161ki gesli se ne ujemata.
 pdfsavedialog.userpasswordconfirm=Potrdi
 pdfsavedialog.warningTitle=Opozorilo
 pdfsavedialog.allowAssembly=Dovoli (ponovno) sestavo
+pdfsavedialog.targetOverwriteWarning=Datoteka ''{0}'' obstaja. Ali jo \u017eelite prepisati?
