--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_sv.properties
@@ -54,3 +54,4 @@ pdfsavedialog.userpasswordNoMatch=L\u00f6senorden \u00e4r inte identiska.
 pdfsavedialog.userpasswordconfirm=Bekr\u00e4fta
 pdfsavedialog.warningTitle=Varning
 pdfsavedialog.allowAssembly=Till\u00e5t \u00e5terskapelse
+pdfsavedialog.targetOverwriteWarning=Filen ''{0}'' finns. Skriv \u00f6ver den?
