--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_ca.properties
@@ -35,3 +35,4 @@ plain-text-exportdialog.cancel=Cancel\u00b7lar
 
 plaintext-export.progressdialog.title=Exportant a un fitxer de text...
 plaintext-export.progressdialog.message=L'informe s'ha exportat a un fitxer de text...
+plain-text-exportdialog.targetOverwriteWarning=El fitxer ''{0}'' existeix. El vols sobreescriure?
