--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_cs_CZ.properties
@@ -30,3 +30,4 @@ plain-text-exportdialog.warningTitle=Varov\u00e1n\u00ed
 
 plaintext-export.progressdialog.message=Sestava je exportov\u00e1na do textov\u00e9ho souboru ...
 plaintext-export.progressdialog.title=Exportovat do textov\u00e9ho souboru ...
+plain-text-exportdialog.targetOverwriteWarning=Soubor ''{0}'' existuje. P\u00f8epsat?
