--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_de.properties
@@ -34,3 +34,4 @@ plain-text-exportdialog.cancel=Abbrechen
 
 plaintext-export.progressdialog.title=Exportiere in eine Text Datei ...
 plaintext-export.progressdialog.message=Der Bericht wird nun in eine Text Datei exportiert ...
+plain-text-exportdialog.targetOverwriteWarning=Die Zieldatei existiert bereits. Soll diese Datei \u00fcberschrieben werden?
