--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_fr.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_fr.properties
@@ -35,3 +35,4 @@ plain-text-exportdialog.cancel=Annuler
 plaintext-export.progressdialog.message=Le rapport est maintenant export\u00e9 en fichier text ...
 plaintext-export.progressdialog.title=Exportation vers un fichier text ...
 
+plain-text-exportdialog.targetOverwriteWarning=Le fichier ''{0}'' existe. Voulez vous l'\u00e9craser?
