--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_hu.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_hu.properties
@@ -31,3 +31,4 @@ plain-text-exportdialog.targetOverwriteConfirmation=A(z) ''{0}'' f\u00e1jl l\u00
 plain-text-exportdialog.targetOverwriteTitle=Fel\u00fcl\u00edrhatom a f\u00e1jlt?
 plain-text-exportdialog.warningTitle=Figyelmeztet\u00e9s
 plain-text-exportdialog.cancel=Megszak\u00edt
+plain-text-exportdialog.targetOverwriteWarning=A(z) ''{0}'' f\u00e1jl l\u00e9tezik. Fel\u00fcl\u00edrhatom?
