--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_nl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_nl.properties
@@ -35,3 +35,4 @@ plain-text-exportdialog.cancel=Annuleren
 plaintext-export.progressdialog.title=Bezig te exporteren naar tekst bestand ...
 plaintext-export.progressdialog.message=Het rapport wordt omgezet in een tekst bestand ...
 
+plain-text-exportdialog.targetOverwriteWarning=Het bestand ''{0}'' bestaat reeds. Overschrijven?
