--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
@@ -37,3 +37,4 @@ plain-text-exportdialog.cancel=Anuluj
 
 plaintext-export.progressdialog.title=Eksportuj\u0119 do pliku tekstowego ...
 plaintext-export.progressdialog.message=Raport wyeksportowano do pliku tekstowego ...
+plain-text-exportdialog.targetOverwriteWarning=Plik ''{0}'' ju\u017c istnieje. Nadpisa\u0107?
