--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_ru.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_ru.properties
@@ -30,3 +30,4 @@ plain-text-exportdialog.targetOverwriteConfirmation=\u0424\u0430\u0439\u043b ''{
 plain-text-exportdialog.targetOverwriteTitle=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0444\u0430\u0439\u043b?
 plain-text-exportdialog.warningTitle=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435
 plain-text-exportdialog.cancel=\u041e\u0442\u043c\u0435\u043d\u0430
+plain-text-exportdialog.targetOverwriteWarning=\u0424\u0430\u0439\u043b ''{0}'' \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442. \u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0435\u0433\u043e?
