--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_si.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_si.properties
@@ -30,3 +30,4 @@ plain-text-exportdialog.targetOverwriteConfirmation=Datoteka ''{0}'' obstaja. Al
 plain-text-exportdialog.targetOverwriteTitle=Ali \u017eelite prepisati datoteko?
 plain-text-exportdialog.warningTitle=Opozorilo
 plain-text-exportdialog.cancel=Prekli\u010di
+plain-text-exportdialog.targetOverwriteWarning=Datoteka ''{0}'' obstaja. Ali jo \u017eelite prepisati?
