--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_sv.properties
@@ -35,3 +35,4 @@ plain-text-exportdialog.cancel=Avbryt
 
 plaintext-export.progressdialog.title=Export till textfil p\u00e5g\u00e5r...
 plaintext-export.progressdialog.message=Rapporten exporterades till en textfil...
+plain-text-exportdialog.targetOverwriteWarning=Filen ''{0}'' finns. Skriv \u00f6ver den?
