--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_cs_CZ.properties
@@ -25,3 +25,4 @@ excelexportdialog.targetOverwriteConfirmation=Soubor ''{0}'' existuje. M\u00e1m 
 excelexportdialog.targetOverwriteTitle=P\u00f8epsat soubor?
 excelexportdialog.title=N\u00e1zev
 excelexportdialog.warningTitle=Varov\u00e1n\u00ed
+excelexportdialog.targetExistsWarning=Soubor ''{0}'' existuje. M\u00e1m ho p\u00f8epsat?
