--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_de.properties
@@ -30,3 +30,4 @@ excelexportdialog.title=Titel
 excelexportdialog.warningTitle=Warnung
 excelexportdialog.author=Autor
 
+excelexportdialog.targetExistsWarning=Die Datei ''{0}'' existiert bereits. Soll diese Datei \u00fcberschrieben werden?
