--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_si.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_si.properties
@@ -25,3 +25,4 @@ excelexportdialog.targetOverwriteTitle=Ali \u017eelite prepisati datoteko?
 excelexportdialog.title=Naslov
 excelexportdialog.warningTitle=Opozorilo
 excelexportdialog.author=Avtor
+excelexportdialog.targetExistsWarning=Datoteka ''{0}'' obstaja. Ali jo \u017eelite prepisati?
