--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_sv.properties
@@ -30,3 +30,4 @@ excelexportdialog.targetOverwriteTitle=Skriv \u00f6ver filen?
 excelexportdialog.title=Titel
 excelexportdialog.warningTitle=Varning
 excelexportdialog.author=F\u00f6rfattare
+excelexportdialog.targetExistsWarning=Filen ''{0}'' finns. Skriv \u00f6ver den?
