--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_sv.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_sv.properties
@@ -6,36 +6,36 @@ action.about.mnemonic=VK_A
 action.about.name=Om...
 
 action.back.accelerator=VK_PAGE_UP
-action.back.description=Bl\u00E4ddra till den f\u00F6reg\u00E5ende sidan
+action.back.description=Bl\u00e4ddra till den f\u00f6reg\u00e5ende sidan
 action.back.mnemonic=VK_PAGE_UP
-action.back.name=Bl\u00E4ddra bak\u00E5t
+action.back.name=Bl\u00e4ddra bak\u00e5t
 
 action.close.accelerator=VK_X
-action.close.description=St\u00E4nga f\u00F6rhandsgransknings-f\u00F6nster
+action.close.description=St\u00e4nga f\u00f6rhandsgransknings-f\u00f6nster
 action.close.mnemonic=VK_C
-action.close.name=St\u00E4nga
+action.close.name=St\u00e4nga
 
 action.firstpage.accelerator=VK_HOME
 action.firstpage.description=Switch to the first page
 action.firstpage.name=Hem
 
 action.forward.accelerator=VK_PAGE_DOWN
-action.forward.description=Bl\u00E4ddra till den n\u00E4sta sidan
+action.forward.description=Bl\u00e4ddra till den n\u00e4sta sidan
 action.forward.mnemonic=VK_PAGE_DOWN
-action.forward.name=Bl\u00E4ddra fram\u00E5t
+action.forward.name=Bl\u00e4ddra fram\u00e5t
 
 action.gotopage.accelerator=VK_G
 action.gotopage.description=Se en sida direkt
 action.gotopage.mnemonic=VK_G
-action.gotopage.name=G\u00E5 till sida ...
+action.gotopage.name=G\u00e5 till sida ...
 
 action.lastpage.accelerator=VK_END
-action.lastpage.description=Bl\u00E4ddra till den sista sidan
+action.lastpage.description=Bl\u00e4ddra till den sista sidan
 action.lastpage.mnemonic=VK_END
 action.lastpage.name=Sista sida
 
 action.zoomIn.accelerator=VK_PLUS
-action.zoomIn.description=F\u00F6rst\u00E4rka zoomen
+action.zoomIn.description=F\u00f6rst\u00e4rka zoomen
 action.zoomIn.mnemonic=VK_PLUS
 action.zoomIn.name=Zooma in
 
@@ -45,13 +45,13 @@ action.zoomOut.mnemonic=VK_MINUS
 action.zoomOut.name=Zooma ut
 
 dialog.gotopage.message=Ange en sida nummer
-dialog.gotopage.title=G\u00E5 till sida
+dialog.gotopage.title=G\u00e5 till sida
 
 menu.file.mnemonic=VK_F
 menu.file.name=Fil
 
 menu.help.mnemonic=VK_H
-menu.help.name=Hj\u00E4lp
+menu.help.name=Hj\u00e4lp
 
 menu.navigation.mnemonic=VK_N
 menu.navigation.name=Navigation
@@ -59,31 +59,30 @@ menu.navigation.name=Navigation
 menu.zoom.mnemonic=VK_Z
 menu.zoom.name=Zooma
 
-preview-frame.title=F\u00F6rhandsgranska
+preview-frame.title=F\u00f6rhandsgranska
 
 progress-dialog.page-label=Sida\: {0}
-progress-dialog.pass-label=Pass\: {0} - Ber\u00E4kna v\u00E4rden ...
-progress-dialog.perform-output=Rapportarbetet p\u00E5g\u00E5ng ...
-progress-dialog.prepare-layout=F\u00F6rbereda formaten.
+progress-dialog.pass-label=Pass\: {0} - Ber\u00e4kna v\u00e4rden ...
+progress-dialog.perform-output=Rapportarbetet p\u00e5g\u00e5ng ...
+progress-dialog.prepare-layout=F\u00f6rbereda formaten.
 progress-dialog.rows-label=Rad\: {0} / {1}
-ProgressMonitor.progressText=F\u00F6rlopp...
+ProgressMonitor.progressText=F\u00f6rlopp...
 
 statusline.error=Reportgeneration skapade ett fel\: {0}
 statusline.pages=Sida {0} av {1}
-statusline.repaginate=Ber\u00E4kna sida-brytning, var sn\u00E4ll och v\u00E4nta.
+statusline.repaginate=Ber\u00e4kna sida-brytning, var sn\u00e4ll och v\u00e4nta.
 
 ########################################################################
-#
 # Translations of the Swing-resources
 
 AbstractButton.clickText=klicka
-AbstractDocument.additionText=l\u00E4gga till
+AbstractDocument.additionText=l\u00e4gga till
 AbstractDocument.deletionText=ta bort
-AbstractDocument.redoText=G\u00F6r om
-AbstractDocument.styleChangeText=styl f\u00F6r\u00E4ndring
-AbstractDocument.undoText=\u00C5ngra
-AbstractUndoableEdit.redoText=G\u00F6r om
-AbstractUndoableEdit.undoText=\u00C5ngra
+AbstractDocument.redoText=G\u00f6r om
+AbstractDocument.styleChangeText=styl f\u00f6r\u00e4ndring
+AbstractDocument.undoText=\u00c5ngra
+AbstractUndoableEdit.redoText=G\u00f6r om
+AbstractUndoableEdit.undoText=\u00c5ngra
 
 ColorChooser.cancelText=Avbryt
 ColorChooser.hsbBlueText=B
@@ -94,15 +93,15 @@ ColorChooser.hsbNameText=HSB
 ColorChooser.hsbRedText=R
 ColorChooser.hsbSaturationText=S
 ColorChooser.okText=OK
-ColorChooser.previewText=F\u00F6rhandsgranska
-ColorChooser.resetText=Omst\u00E4lla
+ColorChooser.previewText=F\u00f6rhandsgranska
+ColorChooser.resetText=Omst\u00e4lla
 ColorChooser.rgbBlueMnemonic=VK_B
-ColorChooser.rgbBlueText=Bl\u00E5
+ColorChooser.rgbBlueText=Bl\u00e5
 ColorChooser.rgbGreenMnemonic=VK_G
-ColorChooser.rgbGreenText=Gr\u00F6n
+ColorChooser.rgbGreenText=Gr\u00f6n
 ColorChooser.rgbNameText=RGB
 ColorChooser.rgbRedMnemonic=VK_R
-ColorChooser.rgbRedText=R\u00F6d
+ColorChooser.rgbRedText=R\u00f6d
 ColorChooser.sampleText=Exempel Text  Exempel Text
 ColorChooser.swatchesNameText=Swatches
 ColorChooser.swatchesRecentText=Senaste\:
@@ -110,7 +109,7 @@ ColorChooser.swatchesRecentText=Senaste\:
 FileChooser.acceptAllFileFilterText=Alla filer (*.*)
 FileChooser.cancelButtonMnemonic=VK_C
 FileChooser.cancelButtonText=Avbryt
-FileChooser.cancelButtonToolTipText=Avbryt fil fil v\u00E4ljare
+FileChooser.cancelButtonToolTipText=Avbryt fil fil v\u00e4ljare
 FileChooser.detailsViewButtonAccessibleName=Detaljerna
 FileChooser.detailsViewButtonToolTipText=Detaljerna
 FileChooser.directoryDescriptionText=Katalog
@@ -120,8 +119,8 @@ FileChooser.fileNameLabelText=Fil namn\:
 FileChooser.filesOfTypeLabelMnemonic=VK_T
 FileChooser.filesOfTypeLabelText=Filer av typ\:
 FileChooser.helpButtonMnemonic=VK_H
-FileChooser.helpButtonText=Hj\u00E4lp
-FileChooser.helpButtonToolTipText=Filv\u00E4ljare hj\u00E4lp
+FileChooser.helpButtonText=Hj\u00e4lp
+FileChooser.helpButtonToolTipText=Filv\u00e4ljare hj\u00e4lp
 FileChooser.homeFolderAccessibleName=Hem
 FileChooser.homeFolderToolTipText=Hem
 FileChooser.listViewButtonAccessibleName=Lista
@@ -133,8 +132,8 @@ FileChooser.newFolderErrorSeparator=\:
 FileChooser.newFolderErrorText=Fel under katalog skapandet
 FileChooser.newFolderToolTipText=Skapa en ny katalog
 FileChooser.openButtonMnemonic=VK_O
-FileChooser.openButtonText=\u00D6ppna
-FileChooser.openButtonToolTipText=\u00D6ppna den valda filen
+FileChooser.openButtonText=\u00d6ppna
+FileChooser.openButtonToolTipText=\u00d6ppna den valda filen
 FileChooser.saveButtonMnemonic=VK_S
 FileChooser.saveButtonText=Spara
 FileChooser.saveButtonToolTipText=Spara den valda filen
@@ -142,12 +141,12 @@ FileChooser.updateButtonMnemonic=VK_U
 FileChooser.updateButtonText=Updatera
 FileChooser.updateButtonToolTipText=Updatera katalog lista
 FileChooser.upFolderAccessibleName=Upp
-FileChooser.upFolderToolTipText=Upp en niv\u00E5
+FileChooser.upFolderToolTipText=Upp en niv\u00e5
 
-FormView.resetButtonText=Omst\u00E4lla
-FormView.submitButtonText=Ange fr\u00E5gast\u00E4llningen
+FormView.resetButtonText=Omst\u00e4lla
+FormView.submitButtonText=Ange fr\u00e5gast\u00e4llningen
 
-InternalFrameTitlePane.closeButtonAccessibleName=St\u00E4ng
+InternalFrameTitlePane.closeButtonAccessibleName=St\u00e4ng
 InternalFrameTitlePane.iconifyButtonAccessibleName=Minimalt
 InternalFrameTitlePane.maximizeButtonAccessibleName=Maximalt
 
@@ -156,5 +155,5 @@ OptionPane.noButtonText=Nej
 OptionPane.okButtonText=OK
 OptionPane.yesButtonText=Ja
 
-SplitPane.leftButtonText=v\u00E4nster knapp
-SplitPane.rightButtonText=h\u00F6ger knapp
+SplitPane.leftButtonText=v\u00e4nster knapp
+SplitPane.rightButtonText=h\u00f6ger knapp
