--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_ru.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_ru.properties
@@ -38,3 +38,4 @@ htmlexportdialog.targetPathIsAbsolute=\u041f\u0443\u0442\u044c \u043a \u0432\u04
 htmlexportdialog.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
 htmlexportdialog.warningTitle=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435
 htmlexportdialog.author=\u0410\u0432\u0442\u043e\u0440
+htmlexportdialog.targetExistsWarning=\u0424\u0430\u0439\u043b ''{0}'' \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442. \u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0435\u0433\u043e?
