--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/resources/pdf-export-resources_ca.properties
@@ -54,3 +54,4 @@ pdfsavedialog.userpasswordNoMatch=Les contrassenyes d'usuari no es corresponen.
 pdfsavedialog.userpasswordconfirm=Confirma
 pdfsavedialog.warningTitle=Atenci\u00f3
 pdfsavedialog.allowAssembly=Permetre modificaci\u00f3
+pdfsavedialog.targetOverwriteWarning=El fitxer ''{0}'' existeix. El vols sobreescriure?
