--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_ca.properties
@@ -31,3 +31,4 @@ excelexportdialog.title=T\u00edtol
 excelexportdialog.warningTitle=Atenci\u00f3
 excelexportdialog.author=Autor
 
+excelexportdialog.targetExistsWarning=El fitxer ''{0}'' existeix. El vols sobreescriure?
