ReportConfiguration utility updated . Accelerators in the localisations fixed. Fixed a null pointer in the AbstractExportDialog

--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources_ca.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources_ca.properties
@@ -5,7 +5,7 @@ action.about.name=Quan a...
 action.about.description=Informaci\u00f3 sobre l'aplicaci\u00f3
 action.about.mnemonic=VK_O
 
-action.close.accelerator=control VK_O
+action.close.accelerator=VK_O
 action.close.description=Surt del JFreeReportDemo
 action.close.mnemonic=VK_S
 action.close.name=Sortir
