--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources_fr.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources_fr.properties
@@ -5,12 +5,12 @@ action.about.mnemonic=VK_P
 action.about.name=A propos...
 action.about.description=Information \u00e0 propos de l'application
 
-action.close.accelerator=control VK_Q
+action.close.accelerator=VK_Q
 action.close.description=Quitte JFreeReportDemo
 action.close.mnemonic=VK_Q
 action.close.name=Quitter
 
-action.print-preview.accelerator=control VK_A
+action.print-preview.accelerator=VK_A
 action.print-preview.description=Pr\u00e9 visualise le rapport
 action.print-preview.mnemonic=VK_A
 action.print-preview.name=Aper\u00e7u avant Impression...
