--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_pl.properties
@@ -6,7 +6,7 @@ action.export-to-csv.icon=org/jfree/report/modules/gui/base/resources/SaveAs24.g
 action.export-to-csv.mnemonic=VK_C
 action.export-to-csv.name=Zapisz do CSV...
 action.export-to-csv.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-csv.accelerator=control VK_C
+action.export-to-csv.accelerator=VK_C
 
 csvexportdialog.confirm=Potwierd\u017a
 csvexportdialog.csv-file-description=Pliki danych dzielonych separatorem.
