--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_pl.properties
@@ -6,7 +6,7 @@ action.export-to-plaintext.icon=org/jfree/report/modules/gui/base/resources/Save
 action.export-to-plaintext.mnemonic=VK_T
 action.export-to-plaintext.name=Zapisz jako plik tekstowy...
 action.export-to-plaintext.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-plaintext.accelerator=control VK_T
+action.export-to-plaintext.accelerator=VK_T
 
 error.processingfailed.title=Przetwarzanie raportu nie powiod\u0142o si\u0119
 error.processingfailed.message=Podczas przetwarzania raportu wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d\: {0}
