--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_pt_BR.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_pt_BR.properties
@@ -66,7 +66,7 @@ action.about.description=Sobre o relat\u00f3rio.
 action.about.name=Sobre...
 action.back.description=Ir para a p\u00e1gina anterior
 action.back.name=Anterior
-action.close.accelerator=control VK_Q
+action.close.accelerator=VK_Q
 action.close.description=Fecha a janela de visualiza\u00e7\u00e3o.
 action.close.mnemonic=VK_F
 action.close.name=Fechar
