--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_pl.properties
@@ -6,7 +6,7 @@ action.export-to-html.icon=org/jfree/report/modules/gui/base/resources/SaveAs24.
 action.export-to-html.mnemonic=VK_H
 action.export-to-html.name=Zapisz do HTML...
 action.export-to-html.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-html.accelerator=control VK_H
+action.export-to-html.accelerator=VK_H
 
 error.processingfailed.title=Przetwarzanie raportu nie powiod\u0142o si\u0119
 error.processingfailed.message=Podczas przetwarzania raportu wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d\: {0}
