--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_pl.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_pl.properties
@@ -6,7 +6,7 @@ action.export-to-excel.icon=org/jfree/report/modules/gui/base/resources/SaveAs24
 action.export-to-excel.mnemonic=VK_E
 action.export-to-excel.name=Zapisz do Excel...
 action.export-to-excel.small-icon=org/jfree/report/modules/gui/base/resources/SaveAs16.gif
-action.export-to-excel.accelerator=control VK_E
+action.export-to-excel.accelerator=VK_E
 
 error.processingfailed.title=Przetwarzanie raportu nie powiod\u0142o si\u0119
 error.processingfailed.message=Podczas przetwarzania raportu wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d\: {0}
