Updated the readme to the standard jfree-format.

--- a/pixie/CHANGELOG
+++ b/pixie/CHANGELOG
@@ -1,3 +1,5 @@
+04-Mar-2005 : Another BugFix release for JFreeReport 0.8.5;
+
 21-Oct-2004 : BugFixes ..
 
 19-Jan-2004 : Some final changes and discontinued for now. Implementing the writing
