New, but very basic RTF export GUI module

--- a/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/resources/xls-export-resources_de.properties
@@ -5,7 +5,7 @@ action.export-to-excel.mnemonic=VK_X
 action.export-to-excel.name=Export nach Excel...
 action.export-to-excel.description=Speichert den Bericht im MS-Excel format
 
-error.processingfailed.title=Fehler beim bearbeiten des Berichtes
+error.processingfailed.title=Fehler beim Bearbeiten des Berichtes
 error.processingfailed.message=Die Berichtsgenerierung ist fehlgeschlagen\: {0}
 
 error.savefailed.title=Speichern fehlgeschlagen
