--- a/jfreereport/README
+++ b/jfreereport/README
@@ -2,7 +2,7 @@
 * JFREEREPORT 0.8.5    *
 ************************
 
-?? Feb 2005
+04 Mar 2005
 
 1. INTRODUCTION
 ---------------
@@ -13,7 +13,7 @@ and others.
 
 For the latest news and information about JFreeReport, please refer to:
 
-    http://www.jfree.org/jfreereport/index.html
+    http://www.jfree.org/jfreereport/
 
 
 2. INSTALLATION
@@ -50,26 +50,26 @@ The demo for JFreeReport can be started with
 ------------------
 JFreeReport uses several other open source libraries:
 
-  JCommon - http://www.jfree.org/jcommon/index.html
+  JCommon - http://www.jfree.org/jcommon/
   Pixie - http://sourceforge.net/projects/jfreereport/
 
 If you want to use the bean shell module, you will need:
 
-  BeanShell - http://www.beanshell.org
+  BeanShell - http://www.beanshell.org/
 
 The XML parser and writer require at least an JAXP-1.1 compatible
 parser. JDK 1.4 or higher already contains a suitable parser, for
 all other JDKs you will need an additional package, for instance:
 
-  GnuJAXP - http://www.gnu.org/software/classpathx/jaxp
+  GnuJAXP - http://www.gnu.org/software/classpathx/jaxp/
 
 The RTF or PDF support requires the iText library (version 1.2 or higher):
 
-  iText - http://www.lowagie.com/iText
+  iText - http://www.lowagie.com/iText/
 
 The Excel export requires the Apache POI library (version 2.5.1 or higher)
 
-  POI - http://jakarta.apache.org/poi
+  POI - http://jakarta.apache.org/poi/
 
 
 6. JAVADOC HTML PAGES
@@ -90,7 +90,7 @@ java class
 
 or by starting the misc-referencedoc module with
 
-  java -jar jfreereport-0.8.4_6-misc-referencedoc.jar
+  java -jar jfreereport-misc-referencedoc-0.8.5.jar
 
 The reference manual documents all currently defined StyleKeys and
 the object definitions used in the stylekeys and when defining
@@ -132,7 +132,7 @@ Ant script (tested using Ant 1.5.4) is included in the distribution:
 
 You can find out more about Ant at:
 
-    http://jakarta.apache.org/ant
+    http://ant.apache.org/
 
 Ant is licensed under the terms of the Apache Software License (a
 popular open source software license).
