--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -6,11 +6,23 @@ A list of changes in recent versions:
         * [BUG] The 'pagebreak-before-print' and 'pagebreak-after-print' of
            the SimpleXML DTD were inconsistent. Now all pagebreak attributes
            use the names given above, as these attribute names have been
-           used for the group header/footer for some time.
+           used for the group header/footer for some time. (closes #1165942)
+
+        * [BUG] TableBackground-borders with a width of '0' should not be
+          activated. Such borders must have their color set to 'null'.
+          (closes #1166296)
+
+        * [BUG] Duplicate logging of the project info can be confusing.
+          Removed the log statement from JFreeReportBoot. (closes #1166415)
 
         * The HTML-Export now uses the fixed table-layout alogorithm as
           specified in the CSS-standard. Additionally, the total width of
           the table is now specified in the table tag to help the HTML renderer.
+          Column widths are now specified using the '<col>' tag. (closes #1165992)
+
+        * [BUG] The PDF default encoding of the module configuration was set to
+          Cp1251 (which is cyrillic) but should have been set to Cp1252 (WinAnsi)
+          (closes #1165907)
 
 0.8.5-2: (18-Mar-2005)
         * [BUG] FontPath caching did not validate the cache integrety. This way,
