--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -2,7 +2,7 @@
 5.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
-0.8.5-3: (??)
+0.8.5-3: (25-Mar-2005)
         * [BUG] The GUI-ExportTasks now create missing directories, if
           necessary. The HTML-Directory Export's data directory is now
           relative to the specified HTML file and no longer to the current
@@ -58,7 +58,19 @@ A list of changes in recent versions:
           fields to supply an explicit cell format for the Excel export. Excel
           does not really like the Java-Formats and as there is no reliable
           specification  for the excel format strings on the net, this is a
-          workaround to get good looking excel exports. 
+          workaround to get good looking excel exports.
+
+        * Added support for report constomizations from within the Preview
+          components. A "ReportControler" can now be assigned to the preview base
+          to supply additional menus and/or a custom property editor panel.
+
+          The ReportControlerDemo demonstrates how this could be used.
+          (closes request #1162404)
+
+        * The SwingIcons demo has been changed to search for the 'jlgr-1_0.jar'
+          on the classpath, the directories containing classpath-jars or the
+          local working directory. If that fails, the user now can specify a
+          custom location for the icons.
 
 0.8.5-2: (18-Mar-2005)
         * [BUG] FontPath caching did not validate the cache integrety. This way,
